--- a/GameFramework.vcxproj.filters
+++ b/GameFramework.vcxproj.filters
@@ -33,13 +33,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EnemySpwaner.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="fade.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="meshsky.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="polyline.h">
@@ -58,9 +52,6 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Ui.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="collision.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Render.h">
@@ -98,9 +89,6 @@
     </ClInclude>
     <ClInclude Include="Wall.h">
       <Filter>GameObject</Filter>
-    </ClInclude>
-    <ClInclude Include="Timer.h">
-      <Filter>System</Filter>
     </ClInclude>
     <ClInclude Include="Time.h">
       <Filter>System</Filter>
@@ -171,12 +159,18 @@
     <ClInclude Include="meshfield.h">
       <Filter>GameObject</Filter>
     </ClInclude>
+    <ClInclude Include="meshsky.h">
+      <Filter>GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="collision.h">
+      <Filter>System</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemySpwaner.h">
+      <Filter>GameObject</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="fade.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="meshsky.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="polyline.cpp">
@@ -195,9 +189,6 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Ui.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="collision.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="DirectXAPI.cpp">
@@ -282,6 +273,15 @@
       <Filter>Renderer</Filter>
     </ClCompile>
     <ClCompile Include="meshfield.cpp">
+      <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="meshsky.cpp">
+      <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="collision.cpp">
+      <Filter>System</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemySpawner.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
   </ItemGroup>
