--- a/GameFramework.vcxproj
+++ b/GameFramework.vcxproj
@@ -146,6 +146,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AssetManager.h" />
+    <ClInclude Include="BackgroundUI.h" />
     <ClInclude Include="BattlePhase.h" />
     <ClInclude Include="bullet.h" />
     <ClInclude Include="camera.h" />
@@ -161,6 +162,7 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="DirectXAPI.h" />
+    <ClInclude Include="Gold.h" />
     <ClInclude Include="Render.h" />
     <ClInclude Include="Render2D.h" />
     <ClInclude Include="Render3D.h" />
@@ -177,7 +179,7 @@
     <ClInclude Include="player.h" />
     <ClInclude Include="polyline.h" />
     <ClInclude Include="result.h" />
-    <ClInclude Include="score.h" />
+    <ClInclude Include="Health.h" />
     <ClInclude Include="SelectPhase.h" />
     <ClInclude Include="shadow.h" />
     <ClInclude Include="sound.h" />
@@ -187,14 +189,18 @@
     <ClInclude Include="ThunderTower.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="title.h" />
-    <ClInclude Include="TitleScnne.h" />
+    <ClInclude Include="TitleScene.h" />
     <ClInclude Include="NormalTower.h" />
+    <ClInclude Include="Turn.h" />
     <ClInclude Include="Ui.h" />
+    <ClInclude Include="UiInfoObsever.h" />
+    <ClInclude Include="UiInfoSubject.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="Wall.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BackgroundUI.cpp" />
     <ClCompile Include="BattlePhase.cpp" />
     <ClCompile Include="bullet.cpp" />
     <ClCompile Include="camera.cpp" />
@@ -220,16 +226,15 @@
     <ClCompile Include="RenderInfo.h" />
     <ClCompile Include="result.cpp" />
     <ClCompile Include="ResultScene.cpp" />
-    <ClCompile Include="score.cpp" />
+    <ClCompile Include="Health.cpp" />
     <ClCompile Include="SelectPhase.cpp" />
     <ClCompile Include="shadow.cpp" />
     <ClCompile Include="sound.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="ThunderTower.cpp" />
     <ClCompile Include="title.cpp" />
-    <ClCompile Include="TitleScnne.cpp" />
+    <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="NormalTower.cpp" />
-    <ClCompile Include="Ui.cpp" />
     <ClCompile Include="Utility.cpp" />
     <ClCompile Include="Wall.cpp" />
   </ItemGroup>
