--- a/GameFramework.vcxproj
+++ b/GameFramework.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="AssetManager.h" />
     <ClInclude Include="BackgroundUI.h" />
+    <ClInclude Include="BattleLoop.h" />
     <ClInclude Include="BattlePhase.h" />
     <ClInclude Include="bullet.h" />
     <ClInclude Include="camera.h" />
@@ -160,9 +161,12 @@
     <ClInclude Include="fade.h" />
     <ClInclude Include="FireTower.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="GameLoop.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="DirectXAPI.h" />
     <ClInclude Include="Gold.h" />
+    <ClInclude Include="Place.h" />
+    <ClInclude Include="PreparationLoop.h" />
     <ClInclude Include="Render.h" />
     <ClInclude Include="Render2D.h" />
     <ClInclude Include="Render3D.h" />
@@ -201,6 +205,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BackgroundUI.cpp" />
+    <ClCompile Include="BattleLoop.cpp" />
     <ClCompile Include="BattlePhase.cpp" />
     <ClCompile Include="bullet.cpp" />
     <ClCompile Include="camera.cpp" />
@@ -210,6 +215,7 @@
     <ClCompile Include="EnemyBullet.cpp" />
     <ClCompile Include="fade.cpp" />
     <ClCompile Include="FireTower.cpp" />
+    <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Home.cpp" />
     <ClCompile Include="input.cpp" />
@@ -217,9 +223,11 @@
     <ClCompile Include="meshfield.cpp" />
     <ClCompile Include="meshsky.cpp" />
     <ClCompile Include="model.cpp" />
+    <ClCompile Include="Place.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="polyline.cpp" />
     <ClCompile Include="DirectXAPI.cpp" />
+    <ClCompile Include="PreparationLoop.cpp" />
     <ClCompile Include="Render2D.cpp" />
     <ClCompile Include="Render3D.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
